--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Agafay</title>
+        <title>TripAgafay</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- font awesome cdn -->
@@ -61,14 +61,14 @@
                     <h1>Leave Your Footprints</h1>
                     <p>Escape to the stunning Agafay Desert, a hidden gem near Marrakech. Experience breathtaking landscapes, luxury desert camps, and unforgettable adventures under the starry sky. Discover the magic of Agafay today!</p>
                 </div>
-                <div class = "header-form">
+                <!--<div class = "header-form">
                     <h2>Choose your Travel location:</h2>
                     <form class = "flex">
                         <input type = "text" class = "form-control" placeholder="Destination name">
                         <input type="date" class = "form-control" placeholder="Date">
                         <input type="number" class = "form-control" placeholder="Price ($)">
                         <input type="submit" class = "btn" value = "Search">
-                    </form>
+                    </form>-->
                 </div>
             </div>
         </header>
